WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87981
Fix reference to undefined variable in debug mode
https://bugs.webkit.org/show_bug.cgi?id=87981
Summary
Fix reference to undefined variable in debug mode
Andy Wingo
Reported
2012-05-31 08:22:38 PDT
The patch to be attached fixes a case in which an ASSERT references an uninitialized variable. Pretty minor stuff!
Attachments
Patch
(1.33 KB, patch)
2012-05-31 08:37 PDT
,
Andy Wingo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Wingo
Comment 1
2012-05-31 08:37:01 PDT
Created
attachment 145098
[details]
Patch
Geoffrey Garen
Comment 2
2012-05-31 09:44:30 PDT
Comment on
attachment 145098
[details]
Patch r=me!
WebKit Review Bot
Comment 3
2012-05-31 10:28:39 PDT
Comment on
attachment 145098
[details]
Patch Clearing flags on attachment: 145098 Committed
r119117
: <
http://trac.webkit.org/changeset/119117
>
WebKit Review Bot
Comment 4
2012-05-31 10:28:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug