Fix reference to unset variable in debug mode https://bugs.webkit.org/show_bug.cgi?id=87981

Reviewed by Geoffrey Garen.

* runtime/JSONObject.cpp (Stringifier::Holder::Holder):
Initialize m_size in debug mode, as we check it later in an assert.


Canonical link: https://commits.webkit.org/105815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119117 268f45cc-cd09-0410-ab3c-d52691b4dbfc